--- a/CSS/main.css
+++ b/CSS/main.css
@@ -2,3 +2,11 @@ body {
 	color: white;
 	background: #B2F7C5;
 }
+
+#song {
+transform: scale(1.5, 1.5);
+-webkit-transform: scale(1.5, 1.5);
+-moz-transform: scale(1.5, 1.5);
+-o-transform: scale(1.5, 1.5);
+-ms-transform: scale(1.5, 1.5);
+}
