--- a/CSS/isolatedelements.css
+++ b/CSS/isolatedelements.css
@@ -9,15 +9,16 @@ p {
 }
 
 h1 {
-	font-size: 15px;
+	font-size: 45px;
 	color: #B2F7C5;
+	text-align: center;
 }
 
 #Box1 {
 	background-color: #FFFFFF;
-	margin-left: 0px;
-	width: 300px;
-	height: 300px;
+	margin-left: 100px;
+	width: 500px;
+	height: 400px;
     position: fixed;
     top: 10px;
 	overflow: scroll;
@@ -34,16 +35,16 @@ h1 {
 
 #Box2 {
 	background-color: #FFFFFF;
-	margin-left: 300px;
-	width: 300px;
-	height: 300px;
+	margin-left: 650px;
+	width: 500px;
+	height: 400px;
     position: fixed;
-    top: 300px;
+    top: 200px;
 	overflow: scroll;
 	border: 10px solid pink;
 }
 
 #navi {
-	margin-top: 790px;
+	margin-top: 630px;
 }
 
