--- a/CSS/isolatedelements.css
+++ b/CSS/isolatedelements.css
@@ -1,5 +1,5 @@
 body {
-	background-color: #B2F7C5;
+	background-color: #FFFFFF;
 	font-family: helvetica, sans-serif;
 
 }
@@ -16,14 +16,24 @@ h1 {
 }
 
 #Box1 {
-	background-color: #FFFFFF;
-	margin-left: 100px;
-	width: 500px;
-	height: 400px;
+	background-color: none;
+	background-image: url('https://s25.postimg.org/413f0gv0f/imac.png');
+	margin-left: 150px;
+	width: 800px;
+	height: 667px;
     position: fixed;
     top: 10px;
-	overflow: scroll;
-	border: 10px solid pink;
+}
+
+.content {
+	width: 723px;
+	margin-left:35px;
+	margin-top:35px;
+	height: 405px;
+    overflow: scroll;
+	border: 0px solid pink;
+
+
 }
 
 .grindr {
@@ -43,39 +53,5 @@ h1 {
 
 .imessage {
 	text-align: left;
-}
-
-#Box2 {
-	background-color: #FFFFFF;
-	margin-left: 650px;
-	width: 500px;
-	height: 400px;
-    position: fixed;
-    top: 200px;
-	overflow: scroll;
-	border: 10px solid pink;
-}
-
-.robotchat {
-	text-align: left;
-}
-.chatroom {
-	text-align: right;
-}
-
-.twitterDM {
-	text-align: left;
-}
-
-.googlehangout {
-	text-align: right;
-}
-
-.skype {
-	text-align: left;
-}
-
-#navi {
-	margin-top: 630px;
 }
 
